# midikeys

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  app.cpp  app.hpp  app_paths.cpp  app_paths.hpp  input_handler.cpp  input_handler.hpp  input_manager.cpp  input_manager.hpp  main.cpp  midi_device.cpp  midi_device.hpp  midi_factory.hpp  midi_message.cpp  midi_message.hpp  midi_util.hpp  rtmidi_ports.cpp  rtmidi_ports.hpp  stateful_midi_listener.cpp  stateful_midi_listener.hpp  windows_input_handler.hpp
src/config/: configuration.hpp  configuration_manager.cpp  configuration_manager.hpp  configuration_util.hpp  configuration_validator.hpp  configuration_yaml.hpp  device_configuration.hpp
src/device/: device_manager.cpp  device_manager.hpp  device_mapping.cpp  device_mapping.hpp  device_mapping_yaml.hpp  device_message.hpp  device_message_yaml.hpp  device_profile.cpp  device_profile.hpp  device_profile_yaml.hpp
src/input/: input_api.cpp  input_api.hpp  input_api_factory.hpp  keyboard_event.hpp  keyboard_handler.hpp
src/io/: input_binding.hpp  input_factory.hpp  input_handler.hpp  input_manager.cpp  input_manager.hpp  input_mapping.cpp  input_mapping.hpp  keyboard_event.hpp  windows_input_handler.cpp  windows_input_handler.hpp
src/midi/: midi_api.hpp  midi_api_factory.hpp  midi_connection.cpp  midi_connection.hpp  midi_device.cpp  midi_device.hpp  midi_device_manager.cpp  midi_device_manager.hpp  midi_factory.hpp  midi_input.cpp  midi_input.hpp  midi_input_bridge.cpp  midi_input_bridge.hpp  midi_listener.hpp  (+21 more)
(+27 files in other folders)
